# EnrichSalesAgent

./: .gitignore  README.md
client/: .env.example  README.md  VERCEL_DEPLOYMENT.md  index.html  vercel.json
client/src/: index.css
client/src/components/: BriefingPreview.tsx  ErrorView.tsx  Header.tsx  InputForm.tsx  ProgressFeed.tsx  ProgressView.tsx  SkeletonCard.tsx  StickyActionBar.tsx
client/src/components/BriefingCard/: AftermarketFootprint.tsx  BoothContact.tsx  CompanyIdentityBar.tsx  CompanySnapshot.tsx  CompanySummary.tsx  ConfidenceDot.tsx  GeographyBadge.tsx  OpeningLine.tsx  ProductLine.tsx  RecentSignals.tsx  SourceChip.tsx  SourcesFooter.tsx  StatusBadge.tsx  index.tsx
client/src/hooks/: useEnrichStream.ts
client/src/pages/: Index.tsx
client/src/types/: briefing.ts
client/src/utils/: clipboard.ts  geography.ts  research.ts
docs/images/: README.md
server/: README.md  pyproject.toml  requirements.txt  research_cache.sqlite3  vercel.json
server/app/: config.py  main.py  models.py  routes.py
server/app/cache/: __init__.py  sqlite_cache.py
server/app/llms/: __init__.py  clients.py
server/app/prompts/: __init__.py  enrichment.py  people.py  scraper.py  synthesizer.py
server/app/services/: aftermarket.py  discovery.py  enrichment.py  geography.py  hunter.py  news.py  people.py  scraper.py  synthesizer.py
