[project]
name = "sales-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"fastapi",
	"uvicorn",
	"python-dotenv",
	"requests",
	"beautifulsoup4",
	"pydantic",
	"langchain-core",
	"langchain-google-genai",
	"langchain-groq",
]
